[project]
name = "cpps"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "parsimonious (>=0.10.0,<0.11.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "svgwrite (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
